--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ license = "MIT"
 
 name = "vigie"
 
-[build-dependencies]
+[dependencies]
 
-linenoise-rust = "~0.0.1"
+linenoise-rust = "~0.1.0"
 # yaml = "~0.0.6"
 url = "0.2.5"
